tests/paczka2/big_fuzzy/17136961.err
Error in line 2: SMBN S395 67,8
Error in line 10: WqQl S980 85,3
Error in line 8: TLfJCDJRf S931 51,1
Error in line 16: tUM S980 12,8
Error in line 28: tUM S931 89,5
Error in line 39: SMBN S&80 116,6
Error in line 38: SMBN S980 69,4
Error in line 40: SMBN S395 42,7
Error in line 44: SMBN S931 34,1
Error in line 50: TLfJCDJRf S395 50,4
Error in line 56: A893 S395 16,8
Error in line 59: TLfJCDJRf S980 -6,3
Error in line 63: e2LMEiKu S931 92,5
Error in line 55: TLfJCDJRf S980 95,4
Error in line 64: wz9DdkVY S395 2,1
Error in line 68: wz9DdkVY S980 4,6
Error in line 79: TLfJCDJRf S395 29,2
Error in line 66: e2LMEiKu S980 92,1
Error in line 81: TLfJCDJRf A893 11,8
Error in line 82: e2LMEiKu S931 36,6
Error in line 98: TLfJCDJRf S980 55,93
Error in line 105: tUM S980 78,2
Error in line 88: TLfJCDJRf S931 98,4
Error in line 103: e2LMEiKu S980 2,6
Error in line 119: A893 A893 91,6
Error in line 125: WqQl S931 21,4
Error in line 126: SMBN S980 5,8
Error in line 123: wz9DdkVY S931 4,8
Error in line 131: tUM S980 45,0
Error in line 140: SMBN S931 93,2
Error in line 139: e2LMEiKu S395 271,6
Error in line 148: SMBN S980 25M4
Error in line 132: wz9DdkVY S980 89,7
Error in line 150: tUM S980 3,6
Error in line 158: A893 S395 70,45
Error in line 155: wz9DdkVY S395 81,9
Error in line 153: SMBN S980 121,2
Error in line 163: SMBN S395 95,0
Error in line 165: SMBN S931 4,9
Error in line 169: TLfJCDJRf A893 67,9
Error in line 173: e2LMEiKu S931 15,4
Error in line 174: e2LMEiKu S980 91,7
Error in line 168: SMBN A893 28,9
Error in line 181: WqQl S980 85,5
Error in line 196: SMBN S395 67,8
Error in line 189: A893 S395 4,0
Error in line 200: SMBN S980 43,5
Error in line 203: ]2LMEiKu S980 60,5
Error in line 212: A893 S931 43,9
Error in line 216: WqQl S395 399,9
Error in line 211: e2LMEiKu S980 18,2
Error in line 234: SMBN S395 51,2
Error in line 238: TLfJCDJRf S395 80,0
